# load-distribution-physics-simulator

./: README.md
solver/: .gitignore  CMakeLists.txt
solver/include/solver/: Model.hpp  Result.hpp  Solver.hpp
solver/src/cli/: main.cpp
solver/src/solver/: Solver.cpp
solver/tests/: Spring1DTest.cpp
